# Video-Compression

./: .gitignore  CMakeLists.txt  Encoding.cpp  Encoding.h  GOP.cpp  GOP.h  main.cpp
